--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,12 @@
 			<version>1.18.8</version>
 			<scope>provided</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-thymeleaf -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+			<version>2.2.4.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<build>
